--- a/download_pdf.html
+++ b/download_pdf.html
@@ -65,7 +65,7 @@
                 const logoY = (pageHeight - logoHeight) / 2 - 40; // Adjust Y position to leave space for text
 
                 pdf.addImage(logoDataUrl, 'PNG', logoX, logoY, logoWidth, logoHeight);
-
+                
                 pdf.setFontSize(16);
                 pdf.text('All Participants Predictions', pageWidth / 2, logoY + logoHeight + 20, { align: 'center' });
 
@@ -73,18 +73,25 @@
                 const participants = await response.json();
 
                 pdf.setFontSize(12);
-                let y = logoY + logoHeight + 30;
+                pdf.setFont(undefined, 'bold');
+                pdf.text('Participants', pageWidth / 2, logoY + logoHeight + 35, { align: 'center' });
+                pdf.setFont(undefined, 'normal');
+                pdf.setLineWidth(0.5);
+                pdf.line((pageWidth - 30) / 2, logoY + logoHeight + 38, (pageWidth + 30) / 2, logoY + logoHeight + 38); // Underline
+
+                let y = logoY + logoHeight + 45;
+                const lineSpacing = 5;
                 participants.participants.forEach(participant => {
-                    pdf.text(participant.name, 10, y);
-                    y += 10;
+                    pdf.text(participant.name, pageWidth / 2, y, { align: 'center' });
+                    y += lineSpacing;
                 });
 
                 // Start a new page for the participant CSV data
                 pdf.addPage();
 
                 const boldText = [
-                    'Group Stage Predictions', 'Group A', 'Group B', 'Group C', 'Group D', 'Group E', 'Group F',
-                    'Knockout Stage Predictions', 'Round of 16', 'Quarterfinals', 'Semifinals', 'Final',
+                    'Group Stage Predictions', 'Group A', 'Group B', 'Group C', 'Group D', 'Group E', 'Group F', 
+                    'Knockout Stage Predictions', 'Round of 16', 'Quarterfinals', 'Semifinals', 'Final', 
                     'Top Goalscorer', 'Best Goalkeeper', 'Player of Tournament', 'Additional Predictions'
                 ];
 
