--- a/group_stage_result.html
+++ b/group_stage_result.html
@@ -45,7 +45,7 @@
         }
         th, td {
             padding: 8px;
-            text-align: left;
+            text-align: center;
         }
         th {
             background-color: #333333;
@@ -128,8 +128,19 @@
             const response = await fetch('./jsons/participants.json');
             const participants = await response.json();
 
-            let tableHTML = '<table>';
-            tableHTML += '<tr><th>Participant</th><th>Prediction</th></tr>';
+            let tableHTML = `<h2><img src="${countries[country1]}" alt="${country1} flag"> ${country1} vs. ${country2} <img src="${countries[country2]}" alt="${country2} flag"></h2>`;
+            tableHTML += '<table>';
+            tableHTML += '<tr><th></th>';
+            participants.participants.forEach(participant => {
+                tableHTML += `<th colspan="2">${participant.name}</th>`;
+            });
+            tableHTML += '</tr>';
+            tableHTML += '<tr><td></td>';
+            participants.participants.forEach(participant => {
+                tableHTML += `<td><img src="${countries[country1]}" alt="${country1} flag"></td><td><img src="${countries[country2]}" alt="${country2} flag"></td>`;
+            });
+            tableHTML += '</tr>';
+            tableHTML += '<tr><td>Score</td>';
             let matchFound = false;
 
             for (const participant of participants.participants) {
@@ -137,20 +148,28 @@
                 const csvData = await csvResponse.text();
                 const rows = csvData.split('\n').map(row => row.split(','));
 
+                let participantPrediction = '';
                 for (const row of rows) {
                     if (row.includes(country1) && row.includes(country2)) {
-                        const prediction = row.slice(1).join(', '); // Exclude the date column
-                        tableHTML += `<tr><td>${participant.name}</td><td>${prediction}</td></tr>`;
+                        participantPrediction = row.slice(1).join(', '); // Exclude the date column
                         matchFound = true;
                         break;
                     }
                 }
+                if (participantPrediction) {
+                    const scores = participantPrediction.split(', ');
+                    tableHTML += `<td>${scores[0]}</td><td>${scores[1]}</td>`;
+                } else {
+                    tableHTML += '<td>N/A</td><td>N/A</td>';
+                }
             }
+
+            tableHTML += '</tr>';
+            tableHTML += '</table>';
 
             if (!matchFound) {
                 resultsContainer.innerHTML = `<p>No matches found between ${country1} and ${country2} in participant predictions.</p>`;
             } else {
-                tableHTML += '</table>';
                 resultsContainer.innerHTML = tableHTML;
             }
         }
