--- a/group_stage_result.html
+++ b/group_stage_result.html
@@ -162,14 +162,13 @@
                 let participantPrediction = '';
                 for (const row of rows) {
                     if (row.includes(country1) && row.includes(country2)) {
-                        participantPrediction = row.slice(1).join(', '); // Exclude the date column
+                        participantPrediction = row.slice(1); // Exclude the date column
                         matchFound = true;
                         break;
                     }
                 }
-                if (participantPrediction) {
-                    const scores = participantPrediction.split(', ');
-                    tableHTML += `<td>${scores[1]}</td><td>${scores[2]}</td>`;
+                if (participantPrediction.length > 0) {
+                    tableHTML += `<td>${participantPrediction[1]}</td><td>${participantPrediction[3]}</td>`;
                 } else {
                     tableHTML += '<td>N/A</td><td>N/A</td>';
                 }
