--- a/group_stage_result.html
+++ b/group_stage_result.html
@@ -26,14 +26,16 @@
             color: #fff;
             border: 1px solid #444444;
             margin: 10px;
+            height: 36px;
         }
         button {
-            background-color: #4CAF50;
-            color: white;
+            background-color: #fff;
+            color: #000;
             padding: 10px 20px;
             margin-top: 10px;
-            border: none;
+            border: 1px solid #444444;
             cursor: pointer;
+            height: 36px;
         }
         table {
             width: 100%;
