--- a/group_stage_result.html
+++ b/group_stage_result.html
@@ -52,6 +52,12 @@
         th {
             background-color: #333333;
         }
+        th:first-child {
+            width: 35%;
+        }
+        th[colspan="2"] {
+            width: calc(65% / 3);
+        }
         .center {
             text-align: center;
             margin-top: 20px;
