--- a/group_stage_result.html
+++ b/group_stage_result.html
@@ -186,6 +186,22 @@
             const response = await fetch('./jsons/participants.json');
             const participants = await response.json();
 
+            const actualResultsResponse = await fetch('./results_csv/Actual_Results.csv');
+            const actualResultsData = await actualResultsResponse.text();
+            const actualResultsRows = actualResultsData.split('\n').map(row => row.split(','));
+
+            let actualResult = ['', ''];
+
+            for (const row of actualResultsRows) {
+                if (row.includes(country1) && row.includes(country2)) {
+                    const country1Index = row.indexOf(country1);
+                    const country2Index = row.indexOf(country2);
+                    actualResult[0] = row[country1Index + 1];
+                    actualResult[1] = row[country2Index + 1];
+                    break;
+                }
+            }
+
             let headerHTML = `<h2><img src="${countries[country1]}" alt="${country1} flag"> ${country1} vs. ${country2} <img src="${countries[country2]}" alt="${country2} flag"></h2>`;
             let tableHTML = '<table>';
             tableHTML += '<tr><th>Participant</th>';
@@ -197,6 +213,17 @@
             participants.participants.forEach(participant => {
                 tableHTML += `<td><img src="${countries[country1]}" alt="${country1} flag"></td><td><img src="${countries[country2]}" alt="${country2} flag"></td>`;
             });
+            tableHTML += '</tr>';
+            tableHTML += '<tr><th>Actual Results</th>';
+            if (actualResult[0] === '' || actualResult[1] === '') {
+                participants.participants.forEach(() => {
+                    tableHTML += '<td colspan="2">Game not played yet</td>';
+                });
+            } else {
+                participants.participants.forEach(() => {
+                    tableHTML += `<td>${actualResult[0]}</td><td>${actualResult[1]}</td>`;
+                });
+            }
             tableHTML += '</tr>';
             tableHTML += '<tr><th>Predicted Scores</th>';
             let matchFound = false;
