--- a/group_stage_result.html
+++ b/group_stage_result.html
@@ -76,44 +76,44 @@
         <img src="./logos/logo.png" alt="Euro 2024 Logo" style="width:200px;">
     </div>
     <div class="dropdown-container">
-        <label for="country1-1">Select Country 1:</label>
+        <label for="country1-1">Country 1:</label>
         <select id="country1-1">
             <option value="">Select...</option>
         </select>
-        <label for="country2-1">Select Country 2:</label>
+        <label for="country2-1">Country 2:</label>
         <select id="country2-1">
             <option value="">Select...</option>
         </select>
         <button onclick="showPredictions(1)">Show Predictions</button>
     </div>
     <div class="dropdown-container">
-        <label for="country1-2">Select Country 1:</label>
+        <label for="country1-2">Country 1:</label>
         <select id="country1-2">
             <option value="">Select...</option>
         </select>
-        <label for="country2-2">Select Country 2:</label>
+        <label for="country2-2">Country 2:</label>
         <select id="country2-2">
             <option value="">Select...</option>
         </select>
         <button onclick="showPredictions(2)">Show Predictions</button>
     </div>
     <div class="dropdown-container">
-        <label for="country1-3">Select Country 1:</label>
+        <label for="country1-3">Country 1:</label>
         <select id="country1-3">
             <option value="">Select...</option>
         </select>
-        <label for="country2-3">Select Country 2:</label>
+        <label for="country2-3">Country 2:</label>
         <select id="country2-3">
             <option value="">Select...</option>
         </select>
         <button onclick="showPredictions(3)">Show Predictions</button>
     </div>
     <div class="dropdown-container">
-        <label for="country1-4">Select Country 1:</label>
+        <label for="country1-4">Country 1:</label>
         <select id="country1-4">
             <option value="">Select...</option>
         </select>
-        <label for="country2-4">Select Country 2:</label>
+        <label for="country2-4">Country 2:</label>
         <select id="country2-4">
             <option value="">Select...</option>
         </select>
