added update scores

--- a/update_scores.html
+++ b/update_scores.html
@@ -75,6 +75,11 @@
                             score = 5;
                         }
 
+                        console.log(`Game: ${country1} vs ${country2}`);
+                        console.log(`Actual: ${actualScore1} - ${actualScore2}`);
+                        console.log(`Predicted: ${predictedScore1} - ${predictedScore2}`);
+                        console.log(`Score: ${score}`);
+
                         participantData[i].push(score.toString());
                     }
                 }
