added update scores

--- a/update_scores.html
+++ b/update_scores.html
@@ -76,9 +76,9 @@
                         }
 
                         console.log(`Game: ${country1} vs ${country2}`);
-                        console.log(`Actual: ${actualScore1} - ${actualScore2}`);
-                        console.log(`Predicted: ${predictedScore1} - ${predictedScore2}`);
-                        console.log(`Score: ${score}`);
+                        console.log(`Actual Score: ${actualScore1} - ${actualScore2}`);
+                        console.log(`Predicted Score: ${predictedScore1} - ${predictedScore2}`);
+                        console.log(`Calculated Score: ${score}`);
 
                         participantData[i].push(score.toString());
                     }
